<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/imagebutton_menu"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sp_20"
            android:background="@null"
            android:onClick="onClickButton"
            android:src="@mipmap/ic_menu_deeporange" />

        <TextView
            android:id="@+id/text_result_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="end"
            android:lines="1"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:paddingTop="@dimen/dp_10"
            android:id="@+id/text_result_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="end"
            android:hint="@string/button_0"
            android:lines="1"
            android:textSize="@dimen/sp_30" />
    </LinearLayout>

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="5">

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/button_ac"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_ac"
                android:textSize="@dimen/sp_20" />

            <Button
                android:id="@+id/button_hyphen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_hyphen"
                android:textSize="@dimen/sp_20" />

            <Button
                android:id="@+id/button_percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_percent"
                android:textSize="@dimen/sp_20" />

            <Button
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@color/DeepQrange_500"
                android:id="@+id/button_div"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_div"
                android:textSize="@dimen/sp_20" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/button_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_7"
                android:textSize="@dimen/sp_20" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_8"
                android:textSize="@dimen/sp_20" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_9"
                android:textSize="@dimen/sp_20" />

            <Button
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@color/DeepQrange_500"
                android:id="@+id/button_multi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_mul" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/button_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_4"
                android:textSize="@dimen/sp_20" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_5"
                android:textSize="@dimen/sp_20" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_6"
                android:textSize="@dimen/sp_20" />

            <Button
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@color/DeepQrange_500"
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_add"
                android:textSize="@dimen/sp_20" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/button_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_1"
                android:textSize="@dimen/sp_20" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_2"
                android:textSize="@dimen/sp_20" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_3"
                android:textSize="@dimen/sp_20" />

            <Button
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@color/DeepQrange_500"
                android:id="@+id/button_sub"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_sub"
                android:textSize="@dimen/sp_20" />
        </TableRow>


        <TableRow

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/button_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="onClickButton"
                android:text="@string/button_0"
                android:textSize="@dimen/sp_20"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_dot"
                android:textSize="@dimen/sp_20"
                tools:ignore="OnClick" />

            <Button
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@color/DeepQrange_500"
                android:id="@+id/button_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickButton"
                android:text="@string/button_equal"
                android:textSize="@dimen/sp_20"
                tools:ignore="OnClick" />


        </TableRow>

    </TableLayout>


</LinearLayout>